Using run.sh with java 17